syntax = "proto3";

package protocol;

option go_package = "../protocol";

service UserService {
    rpc ListUser(ListUserRequestType) returns (ListUserResponseType) {}
    rpc Register(RegisterRequestType) returns (RegisterResponseType) {}
}

message User {
    string id = 1;
    string name = 2;
}

message ListUserRequestType {

}

message ListUserResponseType {
    repeated User users = 1;
}

message RegisterRequestType {
    string name = 1;
}

message RegisterResponseType {

}